--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 DATABASE_URL=postgresql://postgres:password@localhost:5432/mail_service
 REDISURL=redis://localhost:6379
 ENV=dev
+SECRET_KEY=\xf0\xd7A\x8an\xf2\xb1\x8aB\xba\x12\xdb\x05G\x08k6\xd9\x1d\xb7\x1b\x1c/\xd2
