--- a/requirements.txt
+++ b/requirements.txt
@@ -6,8 +6,10 @@ cffi==1.14.4
 chardet==4.0.0
 click==6.7
 coverage==4.4.2
+croniter==1.0.2
 enum-compat==0.0.3
 eventlet==0.21.0
+fakeredis==1.4.5
 Flask==1.1.2
 Flask-Bcrypt==0.7.1
 Flask-Cors==3.0.3
@@ -25,6 +27,8 @@ jsonschema==2.6.0
 Mako==1.0.7
 MarkupSafe==1.1.1
 marshmallow==3.10.0
+mock==4.0.3
+natsort==7.1.1
 psycopg2-binary==2.8.5
 pycparser==2.18
 PyJWT==1.5.3
@@ -35,8 +39,10 @@ pytz==2017.3
 redis==3.5.3
 requests==2.25.1
 rq==1.7.0
+rq-scheduler==0.10.0
 selenium==3.8.1
 six==1.12.0
+sortedcontainers==2.3.0
 SQLAlchemy==1.3.22
 SQLAlchemy-Utils==0.36.8
 urllib3==1.26.3
